--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".Tools.ToDoList"></activity>
+        <activity android:name=".Events.CourseWindow"></activity>
+        <activity android:name=".Tools.ToDoList" />
         <activity android:name=".Tools.BrownNoise" />
         <activity android:name=".Calendar" />
         <activity android:name=".Tools.MemoryCards.CardMaker" />
         <activity android:name=".Tools.ToolsMenu" />
         <activity android:name=".Help" />
-        <activity android:name=".Events.ViewEvents" />
+        <activity android:name=".Events.ViewCourses" />
         <activity android:name=".Events.CreateEvent" />
         <activity android:name=".Tools.Timer.TimerMenu" />
         <activity android:name=".Tools.Timer.Timer" />
@@ -23,7 +24,7 @@
         <activity android:name=".Tools.MemoryCards.MyCards" />
         <activity android:name=".Tools.MemoryCards.CardMenu" />
         <activity android:name=".Tools.MemoryCards.CreateDeck" />
-        <activity android:name=".Events.EventsMenu" />
+        <activity android:name=".Events.AddCourse" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
