--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".Tools.ToDoList"></activity>
+        <activity android:name=".Tools.ToDoList" />
         <activity android:name=".Tools.BrownNoise" />
         <activity android:name=".Calendar" />
         <activity android:name=".Tools.MemoryCards.CardMaker" />
