--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.example.android.studyapp.Login"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
