first phase of design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.studyapp">
 
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
-    <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="true"/>
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.gyroscope"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,17 +17,18 @@
         android:label="StudEasy"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/Theme.AppCompat.Light">
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="com.example.android.studyapp.Login"/>
+                <action android:name="com.example.android.studyapp.Login" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Tools.PersonalPage"></activity>
+        <activity android:name=".Tools.PersonalPage" />
         <activity android:name=".Tools.MemoryCards.DeckMenu" />
         <activity android:name=".Events.NoteEditor" />
         <activity android:name=".Events.CourseNotes" />
@@ -40,8 +46,7 @@
         <activity android:name=".Tools.MemoryCards.CardMenu" />
         <activity android:name=".Tools.MemoryCards.CreateDeck" />
         <activity android:name=".Events.AddCourse" />
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity
             android:name=".RegisterAccount"
             android:label="Register account" />
